feature: cree helpers de estilos

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,15 @@
+body {
+    background-color: #eeeeee;
+}
 
+.bg-white {
+    background-color: white;
+}
+
+.bg-yellow {
+    background-color: yellow;
+}
+
+.logo {
+    height: 36px;
+}
